# TaxFlow-Pro-v3.8

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILDER_MANUAL.md  CHANGES.md  GETTING_STARTED.md  MIGRATIONS.md  README.md  README.txt  TROUBLESHOOTING.md  _cb1_check.py  _scan_downgrades.py  aggregate_chunked_results.py  alembic.ini  b2_reverify.py  categories.yaml  package-lock.json  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  run_chunked_tests.py  run_chunked_tests_detached.py  run_chunked_tests_detached_sequential.py  run_remaining_tests.py  run_track_a_validation.py  setup_first_run.py  st4_p1_2_audit.py  st4_p2_3_network.py  st4_p3_1_dom_massive.py  st4_p3_2_memory_leak.py  st4_p3_3_localization.py  st4_p3_seed.py  st4_p4_2_fiscal.py  st4_p4_3_report_queue.py  st4_p5_1_rate_limit.py  st4_p5_3_webhook.py  st4_p6_1_pagination.py  st4_p6_2_migration.py  (+9 more)
alembic/: env.py
audit_output/: dependency_audit.md  glm5.1_validator_brief_TEMPLATE.md  phase3_completion_changes_draft.md  security_sprint_changes_draft.md  security_sprint_findings.md  security_sprint_validation.md  task-test-report.json  v3.10_build_design_research.md  v3.10_replace_vs_keep_matrix.md  v3.9.2_release_checklist.md
backend/: api.py  api_models.py  api_utils.py  auth.py  auth_rate_limit.py  backup_import.py  database.py  events.py  models.py  rate_limit.py  rls.py  schemas.py  version.py
config/: settings.yaml
data/: docuclipper-institutions.json  vuln-db.json
docs/: CLOUD_CODE_AUDIT.md  DEPENDENCY_AUDIT.md  ENCRYPTION.md  PACKAGING.md  (+13 more)
(+770 files in other folders)
