[project]
name = "taxflow-pro-private"
version = "3.11.5"
description = "Local-first tax and accounting pipeline (private, not published)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = []

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
markers = [
    "single_instance: tests that must run standalone (hang inside full suite due to state interaction)",
]
